--- a/tmux.conf
+++ b/tmux.conf
@@ -37,11 +37,11 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-us
 
 # Status bar
 set-option -g default-terminal "screen-256color"
-set -g status-fg cyan
-set -g status-bg default
-setw -g window-status-current-style fg=white
-setw -g window-status-current-style bg=black
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+set -g status-fg black
+set -g status-bg white
+setw -g window-status-current-style fg=black
+setw -g window-status-current-style bg=white
+set -g status-right "#[fg=black][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
