--- a/tmux.conf
+++ b/tmux.conf
@@ -39,8 +39,8 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-us
 set-option -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg default
-set -g status-left-length 20
-setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
+set -g status-left-length 30
+setw -g window-status-current-format "#[fg=colour208] #I:#W #[default]"
 setw -g window-status-format " #I:#W "
 set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
