--- a/tmux.conf
+++ b/tmux.conf
@@ -9,10 +9,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Re-size pane
-bind -r H resize-pane -L 5 # Up
-bind -r J resize-pane -D 5 # Down
-bind -r K resize-pane -U 5 # Left
-bind -r L resize-pane -R 5 # Right
+bind -r H resize-pane -L 6 # Up
+bind -r J resize-pane -D 6 # Down
+bind -r K resize-pane -U 6 # Left
+bind -r L resize-pane -R 6 # Right
 
 # Window
 bind | split-window -h
@@ -36,13 +36,13 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Status bar
-set-option -g default-terminal "screen-256color"
-set -g status-fg white
+set -g default-terminal "screen-256color"
+set -g status-fg cyan
 set -g status-bg default
-set -g status-left-length 30
-setw -g window-status-current-format "#[fg=colour208] #I:#W #[default]"
+set -g status-left "#S: "
+set -g status-left-length 40
+setw -g window-status-current-format "#[fg=colour203] #I:#W #[default]"
 setw -g window-status-format " #I:#W "
-set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
