--- a/tmux.conf
+++ b/tmux.conf
@@ -37,10 +37,13 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-us
 
 # Status bar
 set -g default-terminal "screen-256color"
-set -g status-fg black
-set -g status-bg white
+set -g status-fg cyan
+set -g status-bg default
+set -g status-left "#S: "
 set -g status-left-length 40
-set -g status-right "#[fg=black][%Y-%m-%d(%a) %H:%M]"
+setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
+setw -g window-status-format " #I:#W "
+set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
