--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-us
 set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg default
-setw -g window-status-current-format "#[fg=colour214] #I:#W #[default]"
+setw -g window-status-current-format "#[fg=yellow] #I:#W #[default]"
 setw -g window-status-format " #I:#W "
 set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
