--- a/tmux.conf
+++ b/tmux.conf
@@ -35,15 +35,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# Status bar
+# Status
 set -g default-terminal "screen-256color"
-set -g status-fg cyan
-set -g status-bg default
-set -g status-left "#S: "
-set -g status-left-length 40
-setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
-setw -g window-status-format " #I:#W "
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+set -g status off
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
