--- a/tmux.conf
+++ b/tmux.conf
@@ -35,9 +35,14 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# Status
+# Status bar
 set -g default-terminal "screen-256color"
-set -g status off
+set -g status-fg white
+set -g status-bg default
+set -g status-left-length 40
+setw -g window-status-current-format "#[fg=colour222] #I:#W #[default]"
+setw -g window-status-format " #I:#W "
+set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
