--- a/tmux.conf
+++ b/tmux.conf
@@ -36,11 +36,17 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Status bar
+# set -g default-terminal "screen-256color"
+# set -g status-left-length 40
+# setw -g window-status-current-format "#[bg=red] #I:#W #[default]"
+# setw -g window-status-format " #I:#W "
+# set -g status-right "#[fg=default][%Y-%m-%d(%a) %H:%M]"
+
 set -g default-terminal "screen-256color"
 set -g status-fg white
-set -g status-bg default
+set -g status-bg black
 set -g status-left-length 40
-setw -g window-status-current-format "#[fg=colour222] #I:#W #[default]"
+setw -g window-status-current-format "#[fg=red,bold] #I:#W #[default]"
 setw -g window-status-format " #I:#W "
 set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
