--- a/tmux.conf
+++ b/tmux.conf
@@ -40,8 +40,7 @@ set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
 set -g status-left-length 40
-setw -g window-status-current-format "#[fg=red,bold] #I:#W #[default]"
-setw -g window-status-format " #I:#W "
+setw -g window-status-current-format "#[fg=cyan] #I:#W #[default]"
 set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
