--- a/tmux.conf
+++ b/tmux.conf
@@ -40,6 +40,8 @@ set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
 set -g status-left-length 40
+setw -g window-status-current-format "#[fg=red,bold] #I:#W #[default]"
+setw -g window-status-format " #I:#W "
 set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
