Add bind Maximize

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,7 @@ bind -r H resize-pane -L 6 # Up
 bind -r J resize-pane -D 6 # Down
 bind -r K resize-pane -U 6 # Left
 bind -r L resize-pane -R 6 # Right
+bind -T prefix y resize-pane -Z # Maximize
 
 # Window
 bind | split-window -h
