--- a/tmux.conf
+++ b/tmux.conf
@@ -40,8 +40,8 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
-set -g status-left-length 40
-set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
+# set -g status-left-length 40
+# set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
