--- a/tmux.conf
+++ b/tmux.conf
@@ -39,11 +39,7 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 # Status bar
 set -g default-terminal "screen-256color"
 set -g status-fg white
-set -g status-bg colour235
-set -g status-left-length 40
-setw -g window-status-current-format "#[fg=yellow] #I:#W #[default]"
-setw -g window-status-format " #I:#W "
-set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
+set -g status-bg black
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
