--- a/tmux.conf
+++ b/tmux.conf
@@ -39,8 +39,10 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 # Status bar
 set -g default-terminal "screen-256color"
 set -g status-fg white
-set -g status-bg colour235
+set -g status-bg black
 set -g status-left-length 40
+setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
+setw -g window-status-format " #I:#W "
 set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
