--- a/tmux.conf
+++ b/tmux.conf
@@ -43,7 +43,8 @@ set -g status-bg black
 set -g status-left-length 40
 setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
 setw -g window-status-format " #I:#W "
-set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
+set -g status-right-length 60
+set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 white cyan)#[fg=white] | [%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
