--- a/tmux.conf
+++ b/tmux.conf
@@ -23,8 +23,8 @@ set -g pane-active-border-style fg=white
 
 # Set new panes to open in current directory
 bind 'c' new-window -c "#{pane_current_path}"
-bind '-' split-window -c "#{pane_current_path}"
-bind '|' split-window -h -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}" \; select-layout even-horizontal
+bind - split-window -v -c "#{pane_current_path}" \; select-layout even-vertical
 
 # Mouse
 set-option -g mouse on
