--- a/tmux.conf
+++ b/tmux.conf
@@ -40,11 +40,8 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
-set -g status-left-length 40
-setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
-setw -g window-status-format " #I:#W "
 set -g status-right-length 100
-set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 white cyan)#[fg=white] | [%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 white cyan)#[fg=white] [%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
