remove lightline vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ set -g status-left-length 40
 setw -g window-status-current-format "#[fg=red] #I:#W #[default]"
 setw -g window-status-format " #I:#W "
 set -g status-right-length 100
-set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 white cyan)#[fg=white] [%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 white cyan)#[fg=white] | [%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
