add bind option synchronize-panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,10 @@ bind 'c' new-window -c "#{pane_current_path}"
 bind '|' split-window -h -c "#{pane_current_path}"
 bind '-' split-window -v -c "#{pane_current_path}"
 
+# toggle synchronize-panes
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+
 # Mouse
 set-option -g mouse on
 
