--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,6 @@ bind -T prefix y resize-pane -Z # Maximize
 # Window
 bind | split-window -h
 bind - split-window -v
-set -g pane-border-style fg=white
-set -g pane-active-border-style fg=white
 
 # Set new panes to open in current directory
 bind 'c' new-window -c "#{pane_current_path}"
@@ -42,10 +40,8 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Status bar
 set -g default-terminal "screen-256color"
-set -g status-fg white
-set -g status-bg black
 set -g status-right-length 100
-set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 white cyan)#[fg=white] [%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 black black black)#[fg=black] [%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
 bind u source-file ~/.tmux.conf \; display "Reloaded!"
