suppurt XDG Base Directory Specification

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,7 +41,7 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 # Status bar
 set -g default-terminal "screen-256color"
 set -g status-right-length 100
-set -g status-right "#(/bin/zsh $HOME/.tmux/kube-tmux/kube.tmux 250 black black black)#[fg=black] [%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#(/bin/zsh $XDG_CONFIG_HOME/tmux/kube-tmux/kube.tmux 250 black black black)#[fg=black] [%Y-%m-%d(%a) %H:%M]"
 
 # Reload tmux.conf
-bind u source-file ~/.tmux.conf \; display "Reloaded!"
+bind u source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Reloaded!"
